crates/keron-lang/tests/corpus/errors/check/fn_named_before_positional.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: positional arguments must come before named arguments
  --> 5:23
  |
5 | val x: Int = f(a = 1, 2)
  |                       ^
